--- a/jupyter/Game Logic Test.ipynb
+++ b/jupyter/Game Logic Test.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.game_logic import Game"
+    "from src import Game\n",
+    "import torch"
    ]
   },
   {
@@ -15,20 +16,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game = Game(int(2e0), 4)"
+    "device = torch.device('cuda')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "game = Game(batch_size=2, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0, 0, 1, 0],\n",
+       "tensor([[[0, 0, 0, 0],\n",
        "         [0, 1, 0, 0],\n",
-       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 1, 0],\n",
        "         [0, 0, 0, 0]],\n",
        "\n",
        "        [[0, 0, 0, 0],\n",
@@ -37,7 +47,154 @@
        "         [1, 0, 1, 0]]], device='cuda:0', dtype=torch.uint8)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0], device='cuda:0', dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(False, device='cuda:0')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.game_over()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([False, False], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "if game.batch_size > 0:\n",
+    "    print(game.game_over(dim=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 0]], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.available_actions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.check_action(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 4], device='cuda:0', dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.do_action(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [0, 0, 0, 0]],\n",
+       "\n",
+       "        [[0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [2, 0, 0, 0]]], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([False, False], device='cuda:0')"
+       "tensor([0, 4], device='cuda:0', dtype=torch.int32)"
       ]
      },
      "execution_count": 12,
@@ -63,16 +220,112 @@
     }
    ],
    "source": [
-    "game.game_over(dim=1)"
+    "game.score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([13, 14], device='cuda:0', dtype=torch.int8)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.add_tile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0, 1, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [0, 0, 0, 0]],\n",
+       "\n",
+       "        [[0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [2, 0, 0, 2]]], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.state"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0, 8], device='cuda:0', dtype=torch.int32),\n",
+       " tensor([[[1, 0, 0, 0],\n",
+       "          [1, 0, 0, 0],\n",
+       "          [1, 0, 0, 0],\n",
+       "          [0, 0, 0, 0]],\n",
+       " \n",
+       "         [[0, 0, 0, 0],\n",
+       "          [0, 0, 0, 0],\n",
+       "          [0, 0, 0, 0],\n",
+       "          [3, 0, 0, 0]]], device='cuda:0', dtype=torch.uint8))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import torch"
+    "game.simulate_action(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0, 1, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [0, 0, 0, 0]],\n",
+       "\n",
+       "        [[0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [2, 0, 0, 2]]], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.state"
    ]
   },
   {
@@ -83,7 +336,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0, 1, 2, 3])"
+       "tensor([0, 4], device='cuda:0', dtype=torch.int32)"
       ]
      },
      "execution_count": 17,
@@ -92,36 +345,64 @@
     }
    ],
    "source": [
-    "torch.arange(4)"
+    "game.score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = torch.arange(16).reshape(4, 4)"
+    "game.new_game()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0,  5, 10, 15])"
+       "tensor([[[0, 1, 0, 0],\n",
+       "         [0, 0, 0, 1],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0]],\n",
+       "\n",
+       "        [[0, 0, 0, 0],\n",
+       "         [2, 0, 0, 1],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0]]], device='cuda:0', dtype=torch.uint8)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.gather(1, torch.arange(4).unsqueeze(1)).squeeze()"
+    "game.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0], device='cuda:0', dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.score"
    ]
   },
   {
