--- a/notebooks/Game Logic Test.ipynb
+++ b/notebooks/Game Logic Test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src import Game\n",
+    "from src import Batch\n",
     "import torch"
    ]
   },
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cpu')"
+    "device = torch.device('cuda')"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game = Game(batch_size=2, device=device)"
+    "batch = Batch(size=2, device=device)"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game.rotate(torch.tensor([1, 2]))"
+    "batch.rotate(torch.tensor([1, 2], device=device))"
    ]
   },
   {
@@ -46,7 +46,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "tensor([1, 2])"
+       "tensor([1, 1], device='cuda:0', dtype=torch.uint8)"
       ]
      },
      "metadata": {},
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "game.rotation"
+    "batch.can_advance()"
    ]
   },
   {
@@ -66,7 +66,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "tensor([1, 1], dtype=torch.uint8)"
+       "tensor([0, 0], device='cuda:0', dtype=torch.int32)"
       ]
      },
      "metadata": {},
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "game.can_advance()"
+    "batch.advance()"
    ]
   },
   {
@@ -86,7 +86,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "tensor([0, 4], dtype=torch.int32)"
+       "tensor([1, 1], device='cuda:0', dtype=torch.uint8)"
       ]
      },
      "metadata": {},
@@ -94,44 +94,90 @@
     }
    ],
    "source": [
-    "game.advance()"
+    "batch.add_tile()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1]], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "source": [
-    "game.add_tile()"
+    "batch.sym_rotations_advance()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "tensor(False)"
+       "tensor([False, False], device='cuda:0')"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 11
     }
    ],
    "source": [
-    "game.game_over()"
+    "batch.game_over(dim=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([[[1, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [0, 0, 0, 0],\n",
+       "         [0, 0, 0, 1]],\n",
+       "\n",
+       "        [[0, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [1, 0, 0, 0],\n",
+       "         [0, 0, 2, 0]]], device='cuda:0', dtype=torch.uint8)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "batch.states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -143,7 +189,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7-final"
+   "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
